OBMFULL-4625 Events no longer overlapping each others in month views

--- a/ui/resources/themes/default/styles/calendar.css
+++ b/ui/resources/themes/default/styles/calendar.css
@@ -283,6 +283,7 @@
   position: absolute;
   z-index:10;
   overflow:hidden;
+  height: 18px;
 }
 
 .printableCalendar .printableEvent {
